@@ -152,3 +152,4 @@ convertToPhyloseq
 computation
 + new methods getNMF and addNMF for NMF ordination with feature loadings
 computation
++ If missing values, give informative error in *RDA/*CCA functions
